タイトル追加とレイアウト調整

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<center>
+  <h1>cosonへようこそ！</h1>
+  <h2>こそっと、coson</h2>
+  <p>全ての情報を、一箇所に集約</p>
+</center>
