ユーザー登録ページ作成

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
     <div class ='header_text_bottom'>全ての情報を、一箇所に</div>
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to 'cosonとは？', about_path %></li>
+      <li><%= link_to 'ユーザー登録(無料)', signup_path %></li>
     </ul>
   </div>
 </header>
