--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -84,8 +84,6 @@ p {
   margin-left: 200px;
 }
 
-
-
 // フッター
 footer {
   margin-top: 45px;
@@ -94,5 +92,30 @@ footer {
   color: #777 ;
   small {
     float: center;
+  }
+}
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb ;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
+ #error_explanation  {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
   }
 }
